<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_h1"
            tools:layout_editor_absoluteY="18dp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/partner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:textColor="@color/colorTextOrange"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_seller_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partner">

                <ImageView
                    android:id="@+id/img_like"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="@dimen/view_horizontal_margin"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/like"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_seller_rate_success"
                    app:layout_constraintEnd_toStartOf="@+id/tv_seller_rate_success"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_seller_rate_success"
                    app:srcCompat="@drawable/ic_like" />

                <TextView
                    android:id="@+id/tv_seller_rate_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_horizontal_margin"
                    android:textColor="@color/colorTextGreen"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView_slash"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/img_like"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_horizontal_margin"
                    android:text="/"
                    android:textColor="@color/colorTextGray"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_seller_rate_fail"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/tv_seller_rate_success"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_seller_rate_fail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/textView_slash"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/tv_sales_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_horizontal_margin"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:text="@string/sales_percent"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_sales_percent_value"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_seller_rate" />

            <TextView
                android:id="@+id/tv_sales_percent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/tv_sales_percent"
                app:layout_constraintTop_toBottomOf="@+id/cl_seller_rate" />

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:scaleType="fitCenter"
                android:contentDescription="@string/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sales_percent" />

            <TextView
                android:id="@+id/tv_is_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/online_now"
                android:textColor="@color/colorTextGreen"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

            <ImageView
                android:id="@+id/img_placeholder"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="@dimen/view_horizontal_margin"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:scaleType="fitXY"
                android:contentDescription="@string/placeholder"
                app:layout_constraintEnd_toStartOf="@+id/tv_country"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_is_online"
                app:srcCompat="@drawable/ic_placeholder_filled_point" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/img_placeholder"
                app:layout_constraintTop_toBottomOf="@+id/tv_is_online" />

            <ImageView
                android:id="@+id/img_fire"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="@dimen/view_horizontal_margin"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:scaleType="fitXY"
                android:contentDescription="@string/hot_sales"
                app:layout_constraintEnd_toStartOf="@+id/tv_hot_sales_cnt"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country"
                app:srcCompat="@drawable/ic_fire" />

            <TextView
                android:id="@+id/tv_hot_sales_cnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/img_fire"
                app:layout_constraintTop_toBottomOf="@+id/tv_country" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:paddingBottom="100dp"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_hot_sales_cnt">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="100dp">

                    <TextView
                        android:id="@+id/tv_visitors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_vertical_margin"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cardview_vertical_margin"
                        android:max="1000"
                        android:maxHeight="14dp"
                        android:paddingEnd="20dp"
                        android:progressDrawable="@drawable/seek_bar_style"
                        android:splitTrack="false"
                        android:thumb="@drawable/custom_thumb"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_visitors" />

                    <CheckBox
                        android:id="@+id/checkbox_only_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cardview_vertical_margin"
                        android:text="@string/only_mobile"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toStartOf="@+id/checkbox_no_mobile"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

                    <CheckBox
                        android:id="@+id/checkbox_no_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_mobile"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/checkbox_only_mobile"
                        app:layout_constraintTop_toTopOf="@+id/checkbox_only_mobile" />

                    <CheckBox
                        android:id="@+id/checkbox_only_top_tier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/only_top_tier"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toStartOf="@+id/checkbox_only_mobile"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_only_mobile" />

                    <CheckBox
                        android:id="@+id/checkbox_prime_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prime_filter"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toStartOf="@+id/checkbox_no_mobile"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_only_mobile" />

                    <vyacheslav.lukyanov.com.testtaskandroiddev.EditTextUrl
                        android:id="@+id/edt_url"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="@dimen/cardview_vertical_margin"
                        android:background="@drawable/url_edit_text_background"
                        android:inputType="textUri"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_only_top_tier" />

                    <Button
                        android:id="@+id/btn_solo_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="@dimen/cardview_vertical_margin"
                        android:background="@drawable/button_background"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/add_to_cart_empty"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_url" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

</android.support.constraint.ConstraintLayout>